force-app/main/default/objects/Third_Party_Service__c/Third_Party_Service__c.object-meta.xml
<CustomObject>
    <label>Third Party Service</label>
    <nameField>
        <displayFormat>TPS-{00000}</displayFormat>
        <label>Third Party Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>