force-app/main/default/objects/Third_Party_Service__c/fields/Est_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost__c</fullName>
    <label>Est. Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>