force-app/main/default/objects/Third_Party_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aircall</fullName>
            </value>
            <value>
                <fullName>Blackthorn Payments</fullName>
            </value>
            <value>
                <fullName>BNF Drug Interaction Database</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>FormStack Documents</fullName>
            </value>
            <value>
                <fullName>FormStack Documents and eSign</fullName>
            </value>
            <value>
                <fullName>FormStack eSign</fullName>
            </value>
            <value>
                <fullName>FormStack Forms</fullName>
            </value>
            <value>
                <fullName>Gazela DM+D Medication Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Interactive Scheduler</fullName>
            </value>
            <value>
                <fullName>Gazela Job Board Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Microsoft Dynamics Integration Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Netsuite Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Sage Connector</fullName>
            </value>
            <value>
                <fullName>Gazela SAP Connector</fullName>
            </value>
            <value>
                <fullName>Gazela SharePoint app</fullName>
            </value>
            <value>
                <fullName>Gazela Signature Rx Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Stripe App</fullName>
            </value>
            <value>
                <fullName>Gazela Trustpilot Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Xero Connector</fullName>
            </value>
            <value>
                <fullName>Gazela Zoom Meeting Connector</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>Gearset - CPQ+ and Billing</fullName>
            </value>
            <value>
                <fullName>Gearset - Enterprise</fullName>
            </value>
            <value>
                <fullName>Gearset - Salesforce Industries</fullName>
            </value>
            <value>
                <fullName>Gearset - Starter</fullName>
            </value>
            <value>
                <fullName>Gearset - Teams</fullName>
            </value>
            <value>
                <fullName>Impriviata</fullName>
            </value>
            <value>
                <fullName>InventoryWorks - Small Business Inventory Management</fullName>
            </value>
            <value>
                <fullName>IQVIA OneKey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>